fixed modal overflow (p2)

--- a/components/common/modal/Modal.module.scss
+++ b/components/common/modal/Modal.module.scss
@@ -22,6 +22,7 @@
 
   max-width: 100%;
   width: max(35%, min(800px, 100%));
+  min-height: 100%;
 
   padding: variables.$spacing-32;
 
